Fix article title padding on mobile

--- a/src/static/less/page.less
+++ b/src/static/less/page.less
@@ -338,7 +338,7 @@ body {
 @media @mobileWidth{
 	.article {
 		.maintitle {
-			padding:0.2em 15px;
+			padding:0.2em 10px;
 
 			&:before,
 			&:after {
